# amaterasu

./: .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260416_0001_phase1_foundation.py  20260417_0002_phase3_approval_indexing.py
backend/app/: celery_app.py  main.py  worker.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  batches.py  chat.py  chat_sessions.py  documents.py
backend/app/core/: config.py  security.py
backend/app/crud/: crud_chat_session.py  crud_document.py  crud_user.py
backend/app/db/: base.py
backend/app/models/: chat_message.py  chat_session.py  contract_fact.py  document.py  extraction_run.py  user.py
backend/app/schemas/: batch.py  chat_session.py  document.py  user.py
backend/app/services/: bulk_ingestion.py  document_indexing.py  document_parser.py  fact_extraction.py  llm.py  qdrant_index.py  query_router.py  rag.py  search_orchestration.py  sql_search.py  vector_search.py  workspace.py
backend/app/tasks/: __init__.py  base.py  documents.py
backend/tests/: conftest.py  test_document_parser_real_pdfs.py  test_documents_phase1.py  test_documents_phase2.py  test_documents_phase3.py  test_fact_extraction_json_payload.py  test_lmstudio_llm_availability.py  test_lmstudio_phase5.py  test_search_phase4.py
docs/: README.md  SETUP.guide  SETUP.md  glossary.md
docs/agent/: lm_studio.md  setup.md  (+2 more)
frontend/: package-lock.json  package.json
(+48 files in other folders)
