[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.11.0",
    "bcrypt>=5.0.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.100.0",
    "httpx>=0.28.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-text-splitters>=0.0.1",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=3.17.0",
    "pypdfium2>=5.7.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.7.0",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "transformers>=4.0.0",
    "uvicorn>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: обращается к реальному LM Studio по сети (см. .env)",
]
